--- a/story01.html
+++ b/story01.html
@@ -2,12 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-
-<title> story01 </title>
+<title> story 1 </title>
 <link rel="stylesheet" href="styling_stories.css">
-<style>
-#wrapper {background:url('images/tiles.jpg');}
-</style>
+<style> #wrapper {background:url('images/tiles.jpg');} </style>
 </head>
 
 <center>		
@@ -17,7 +14,7 @@
 	<div class="forCat">
 	<img src="images/flag_britaniya.jpg" width="70px" align="left"><br></div>
 		
-<div id="logo">Отрывки: <q>A Simple Principle</q></div><hr>
+<div id="logo">Отрывки: &#8220;A Simple Principle&#8221;</div><hr>
 <nav id="menu">
 	<a href="citation_01/Citations_01.html" onclick="btnSound();">Цитаты</a>
 	<a href="index.html" onclick="btnSound();">на Стартовую</a>
