--- a/story02.html
+++ b/story02.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title> phrases work </title>
+<title> story 2 </title>
 <link rel="stylesheet" href="styling_stories.css">
 <style>
 	#wrapper {	
@@ -20,9 +20,9 @@
 	<div class="forCat">
 	<img src="images/flag_britaniya.jpg" width="70px" align="left"><br></div>
 		
-<div id="logo">Отрывки: <q>Akhenaten &#38 The Antediluvian World</q></div><hr>
+<div id="logo">Отрывки: &#8220;Akhenaten &#38 The Antediluvian World&#8221;</div><hr>
 <nav id="menu">
-	<a href="citation_02/Citations_02.html" onclick="btnSound.play()">Цитаты</a>
+	<a href="citation_02/Citations_02.html" onclick="btnSound.play()"> Цитаты этой Истории </a>
 	<a href="words/word_01.html" onmousedown="btnSound.play()">к Словам</a>
 </nav>
 <hr><hr>
