--- a/story02.html
+++ b/story02.html
@@ -5,27 +5,23 @@
 
 <title> story 2 </title>
 <link rel="stylesheet" href="styling_stories.css">
-<style>
-	#wrapper {	
+<style>	#wrapper {	
 	background:url('images/sea.jpg');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;} </style>
-	
 <script> 	var btnSound = new Audio(); 
-			btnSound.src = "audio/button_06.mp3"; </script>
+		btnSound.src = "audio/button_06.mp3"; </script>
 </head>
 
 <center>		
 <body>
 	<div class="forCat">
-	<img src="images/flag_britaniya.jpg" width="70px" align="left"><br></div>
-		
+	<img src="images/flag_britaniya.jpg"><br></div>
 <div id="logo">Отрывки: &#8220;Akhenaten &#38 The Antediluvian World&#8221;</div><hr>
 <nav id="menu">
 	<a href="citation_02/Citations_02.html" onclick="btnSound.play()"> Цитаты этой Истории </a>
 	<a href="words/word_01.html" onmousedown="btnSound.play()">к Словам</a>
-</nav>
-<hr><hr>
+</nav><hr><hr>
 
 <div id="wrapper">
 <div class="photo">
