--- a/story02.html
+++ b/story02.html
@@ -16,7 +16,7 @@
 <center>		
 <body>
 	<div class="forCat">
-	<img src="images/flag_britaniya.jpg"><br></div>
+	<img src="images/akhenaten.jpg"><br></div>
 <div id="logo">Отрывки: &#8220;Akhenaten &#38 The Antediluvian World&#8221;</div><hr>
 <nav id="menu">
 	<a href="citation_02/Citations_02.html" onclick="btnSound.play()"> Цитаты этой Истории </a>
@@ -27,7 +27,7 @@
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio01');">
 <audio id="audio01" src="audio02/1.mp3" preload="auto"></audio>
-<img class="saturate" src="images/akhenaten.jpg" style="border:none; height:290px; width:220px;">
+<img class="saturate" src="images/mayan.jpg" style="border:none; height:290px; width:220px;">
 </a></div>
 
 <div class="photo">
