--- a/story03.html
+++ b/story03.html
@@ -4,16 +4,15 @@
 <meta charset="utf-8">
 <title> story03 </title>
 <link rel="stylesheet" href="stylingStory.css">
-
 <style>	#wrapper{ background-color:#484540; } </style>
-<script> 	var btnSound = new Audio(); 
-			btnSound.src = "audio/button_06.mp3"; </script>
+<script> var btnSound = new Audio(); 
+	 btnSound.src = "audio/button_06.mp3"; </script>
 </head>
 <center>		
 <body>
 
 <audio hidden autoplay>
-<source src="story_00.mp3" type="audio/mpeg"></audio>
+<source src="story_03.mp3" type="audio/mpeg"></audio>
 <div class="forCat">
 	<img src="images/flag_britaniya.jpg" width="60px" align="left"><br></div>
 		
@@ -21,10 +20,8 @@
 <nav id="menu">
 	<a href="citation_03/Citations_03.html" onclick="btnSound();">Цитаты</a>
 	<a href="../citations/index.html" onclick="btnSound();">к другим Цитатам</a>
-</nav>
+</nav><hr><hr>
 
-	<hr><hr>
-	
 <div id="wrapper">
 
 <div class="photo">
@@ -56,13 +53,10 @@
 <a href="javascript:playAudio('audio06');">&#9830; they didn't yet make ceramics but they were builders
 <audio id="audio06" src="audio03/they didn't yet make ceramics but they were builders.mp3" preload="auto"></audio></a><br/>
 <audio id="audio07" src="audio03/they divided time into minutes and seconds.mp3" preload="auto"></audio>
-
 <audio id="audio09" src="audio03/their caravans crossed the desert.mp3" preload="auto"></audio>
 <audio id="audio10" src="audio03/their houses had mud brick walls on dry stone foundations.mp3" preload="auto"></audio>
 
-
 <a href="javascript:playAudio('audio07');">&#9830; they divided time into minutes and seconds</a><br/>
-
 <a href="javascript:playAudio('audio10');">&#9830; their houses had mud brick walls on dry stone foundations</a><br/>
 </div>
 
@@ -83,22 +77,10 @@
 <a class="btn9" style="float: right; width: 19%;" onclick="location.href='story04.html';" onmousedown="btnSound.play();">Следующая история</a>
 </div>
 
-<script src ="channels.js" 	type="text/javascript"></script>
+<script src ="channels.js" type="text/javascript"></script>
 <script src ="playArray.js" type="text/javascript"></script>
 <script src ="story03.js" type="text/javascript"></script>
-<script type=text/javascript language=JavaScript>
-<!--
-function q3_onclick()
-{
-document.getElementById('q2').style.display='';
-document.getElementById('q4').style.display='';
-}
-function q1_onclick()
-{
-document.getElementById('q2').style.display='none';
-document.getElementById('q4').style.display='none';
-}
-//--></script>
+
 </body>
 </center>
 </html>
