--- a/story03.html
+++ b/story03.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title> story03 </title>
+<title> story 3 </title>
 <link rel="stylesheet" href="stylingStory.css">
 <style>	#wrapper{ background-color:#484540; } </style>
 <script> var btnSound = new Audio(); 
@@ -16,7 +16,7 @@
 <div class="forCat">
 	<img src="images/flag_britaniya.jpg" width="60px" align="left"><br></div>
 		
-<div id="logo">отрывки * the Sumerians</div><hr>
+<div id="logo">отрывки: &#8220;the Sumerians&#8221;</div><hr>
 <nav id="menu">
 	<a href="citation_03/Citations_03.html" onclick="btnSound();">Цитаты</a>
 	<a href="../citations/index.html" onclick="btnSound();">к другим Цитатам</a>
