--- a/story04.html
+++ b/story04.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" href="styling_stories.css">
 <script src="columnGrid.js" type="text/javascript"></script>
 <style> #wrapper{ background-color:#FF8B00; } </style>
-
 </head>
+	
 <center>		
 <body>
 <audio hidden autoplay>
@@ -16,9 +16,9 @@
 <div class="forCat">
 	<img src="images/flag_britaniya.jpg" width="80px" align="left"><br></div>
 		
-<div id="logo">отрывки: Wonder Monuments</div><hr>
+<div id="logo">отрывки: &#8220;Wonder Monuments&#8221;</div><hr>
 <nav id="menu">
-	<a href="№" onclick="btnSound();" embed src="audio/bleep.wav">Цитаты</a>
+	<a href="#" onclick="btnSound();">Цитаты</a>
 	<a href="index.html" onclick="btnSound();">к другим Цитатам</a>
 </nav> <hr><hr>
 
