--- a/story04.html
+++ b/story04.html
@@ -44,31 +44,7 @@
 <audio hidden id="audio04" preload="auto" source src="audio04/4.mp3"></audio>
 <img class="hue-rotate" src="images/eiffel_tower.jpg" style="border:none; height:290px; width:200px;"></a></div>
 
-<audio hidden id="track_01" preload="auto" source src="audio03/archeologists.mp3"></audio>
-<audio hidden id="track_02" preload="auto" source src="audio03/builders.mp3"></audio>
-<audio hidden id="track_03" preload="auto" source src="audio03/ceramics.mp3"></audio>
-<audio hidden id="track_04" preload="auto" source src="audio03/civilization.mp3"></audio>
-<audio hidden id="track_05" preload="auto" source src="audio03/foundations.mp3"></audio>
-<audio hidden id="track_06" preload="auto" source src="audio03/ruins.mp3"></audio>
-<audio hidden id="track_07" preload="auto" source src="audio03/time.mp3"></audio>
-<audio hidden id="track_08" preload="auto" source src="audio03/archeologists discovered.mp3"></audio>
-<audio hidden id="track_09" preload="auto" source src="audio03/before Sumer.mp3"></audio>
-<audio hidden id="track_10" preload="auto" source src="audio03/brick walls.mp3"></audio>
-<audio hidden id="track_11" preload="auto" source src="audio03/crossed the desert.mp3"></audio>
-<audio hidden id="track_12" preload="auto" source src="audio03/gigantic cities.mp3"></audio>
-<audio hidden id="track_13" preload="auto" source src="audio03/into minutes.mp3"></audio>
-<audio hidden id="track_14" preload="auto" source src="audio03/make ceramics.mp3"></audio>
-<audio hidden id="track_15" preload="auto" source src="audio03/minutes and seconds.mp3"></audio>
-<audio hidden id="track_16" preload="auto" source src="audio03/our world.mp3"></audio>
-<audio hidden id="track_17" preload="auto" source src="audio03/people settled.mp3"></audio>
-<audio hidden id="track_18" preload="auto" source src="audio03/stone foundations.mp3"></audio>
-<audio hidden id="track_19" preload="auto" source src="audio03/the scorching sands.mp3"></audio>
-<audio hidden id="track_20" preload="auto" source src="audio03/their caravans.mp3"></audio>
-<audio hidden id="track_21" preload="auto" source src="audio03/their houses.mp3"></audio>
-<audio hidden id="track_22" preload="auto" source src="audio03/trade routes.mp3"></audio>
-
 <div id="playerBox"><div id="trackbox"></div></div>
-
 <div id="grid_container">
 
 <div class="text"><a class="text" href="#" onmousedown="javascript:playAudio('phrase01');">
@@ -134,9 +110,9 @@ and astonishment
 </div>
 
 <a class="btn9" style="float:left; width:20%;" onclick="location.href='story03.html';" onmousedown="btnSound.play();">Предыдущая история</a>
-<a class="btn9" style="float:right; width:30%;" onclick="location.href='#';" onmousedown="btnSound.play();">Следующая история (нет пока)</a>
+<a class="btn9" style="float:right; width:30%;" onclick="location.href='story05.html';" onmousedown="btnSound.play();">Следующая история</a>
 </div>
-<script src="playArrays" type="text/javascript"></script>
+
 <script src="story04.js" type="text/javascript"></script>
 <script src="channels.js" type="text/javascript"></script>
 </body>
