--- a/story05.html
+++ b/story05.html
@@ -22,7 +22,7 @@
 <div id="logo">отрывки: &#8220;Beauty &#38 the Beast&#8221;</div><hr>
 <nav id="menu">
 	<a href="#" onclick="btnSound.play();">Цитаты этой Истории (будут)</a>
-	<a href="../citations/index.html" onclick="btnSound.play();">к большому списку Цитат</a>
+	<a href="../index.html" onclick="btnSound.play();">к большому списку Цитат</a>
 </nav> <hr><hr>
 
 <div id="wrapper">
